--- a/index.html
+++ b/index.html
@@ -14,6 +14,46 @@
       --text-secondary: #8e8e93;
     }
 
+
+    .card-slider {
+  display: flex;
+  gap: 16px;
+  overflow-x: auto;
+  scroll-snap-type: x mandatory;
+  padding-bottom: 16px;
+}
+
+.card-slider::-webkit-scrollbar {
+  display: none;
+}
+
+.card {
+  flex: 0 0 80%;
+  scroll-snap-align: center;
+  background: white;
+  border-radius: 20px;
+  box-shadow: 0 10px 20px rgba(0,0,0,0.08);
+  overflow: hidden;
+  transition: transform 0.3s;
+}
+
+.card img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+}
+
+.card-content {
+  padding: 16px;
+}
+
+.card h3 {
+  margin: 0 0 10px;
+}
+
+.card button {
+  width: 100%;
+}
     body {
       font-family: -apple-system, BlinkMacSystemFont, sans-serif;
       background: var(--bg);
@@ -108,7 +148,7 @@
   <div class="container">
     <h1>Какие чипсы ты пробовал?</h1>
 
-    <ul id="chips-list"></ul>
+    <div class="card-slider" id="chip-cards"></div>
 
     <div class="input-group">
       <input type="text" id="new-chip" placeholder="Добавить чипсы...">
@@ -120,14 +160,19 @@
 
   <script>
     const defaultChips = [
-      "Lay's Classic",
-      "Pringles Sour Cream",
-      "Doritos Nacho Cheese",
-      "Cheetos",
-      "Ruffles",
-      "Lay's Barbecue",
-      "Pringles Hot & Spicy",
-    ];
+  {
+    name: "Lay's Classic",
+    img: "https://i.imgur.com/7yUvePI.jpg"
+  },
+  {
+    name: "Pringles Sour Cream",
+    img: "https://i.imgur.com/tEJw1B6.jpg"
+  },
+  {
+    name: "Doritos Nacho Cheese",
+    img: "https://i.imgur.com/IH8YzJS.jpg"
+  }
+];
 
     let chips = JSON.parse(localStorage.getItem('chips')) || defaultChips;
     let triedState = JSON.parse(localStorage.getItem('triedChips')) || {};
@@ -139,25 +184,32 @@
       localStorage.setItem('triedChips', JSON.stringify(triedState));
     }
 
-    function renderChips() {
-      listElement.innerHTML = '';
-      chips.forEach((chip, index) => {
-        const li = document.createElement('li');
-        li.classList.toggle('tried', triedState[index]);
-        li.innerHTML = `
-          <span>${chip}</span>
-          <button onclick="toggleTried(${index})">
-            ${triedState[index] ? 'Отменить' : 'Пробовал'}
-          </button>
-        `;
-        listElement.appendChild(li);
-      });
-    }
+    function renderCards() {
+  const container = document.getElementById('chip-cards');
+  container.innerHTML = '';
+  defaultChips.forEach((chip, index) => {
+    const tried = triedState[index];
+    const card = document.createElement('div');
+    card.className = 'card';
+    if (tried) card.style.opacity = '0.5';
+
+    card.innerHTML = `
+      <img src="${chip.img}" alt="${chip.name}">
+      <div class="card-content">
+        <h3>${chip.name}</h3>
+        <button onclick="toggleTried(${index})">
+          ${tried ? 'Отменить' : 'Пробовал'}
+        </button>
+      </div>
+    `;
+    container.appendChild(card);
+  });
+}
 
     function toggleTried(index) {
       triedState[index] = !triedState[index];
       saveData();
-      renderChips();
+      renderCards();
     }
 
     function addChip() {
